--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "./vendors/progress/styles";
 @import "./sass/font_face_mixin";
 @import "./sass/fonts";
+@import "./sass/colors";
 
 
 body {
