more functional game play

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import "./sass/font_face_mixin";
 @import "./sass/fonts";
 @import "./sass/colors";
+@import "./sass/animations";
 
 html {
   height: 100%;
