--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,10 @@ h1, h2 {
   font-family: "San Francisco Display", sans-serif;
 }
 
+h1 {
+  font-weight: normal;
+}
+
 .margin {
   margin: 1em;
 }
